= Changelog

== 0.6.1-dev - unreleased

== 0.6.0 - 2024-12-14

* Update auf Rails 7.2
* Konfigurationscheck prüft beim Konnektor, ob der Port für SDS und der SOAP-Port erreichbar sind.

== 0.5.0 - 2024-12-08

* Neu: xref:admin/connector-edit.adoc#_authentifikation_per_userpasswort[Client-Authentifikation am Konnektor mit User/Passwort] (alternativ zum Client-Zertifikat)
* Fix: Löschen von Objekten mit verbesserter Fehlermeldung
* Einzelne Logs auf ungültig setzen (bisher nur alle veralteten Logs auf einmal)

== 0.4.7 - 2024-11-30

* Fix: Clientzertifikat P12-Import jetzt auch mit Legacy-Formaten möglich, 
  sofern openssl -legacy das Format unterstützt (OpenSSL-Version 3.x). Kocoboxen erzeugen noch P12 in einem Legacy-Format.
* Update TI-Lagebild-Button
* Logeinträge: neue Funktion veraltete Logeinträge auf ungültig setzen

== 0.4.6 - 2024-11-08

* Fix: Einzelanzeige Kontext zeigt jetzt die Tabellen Konnektoren/Karten korrekt.
* Update PIN-Status nach PIN-Verify, um die Änderung unmittelbar anzuzeigen.
* Anzeige Arbeitsplätze überarbeitet; Löschfunktion für veraltete Arbeitsplätze
* Dokumentation für Arbeitsplätze ergänzt
* Verbesserung TI-Lagebild: Unterscheidung zwischen Teil- (WARNING) und Totalausfall eines Dienstes (CRITICAL)


== 0.4.5 - 2024-11-02

* Neu: xref:user/ti-lagebild.adoc[TI-Lagebild]: Anzeige von Störungen der 
  Telematik-Infrastruktur
* Dokumentation zur xref:user/verify-pin.adoc[PIN-Verifizierung] ergänzt

== 0.4.4 - 2024-10-06

* Neu: Import von Client-Zertifikaten als P12-Datei

== 0.4.3 - 2024-10-03

* Update der Dokumentation
* Fix: keine SOAP-Abfrage, wenn der Konnektor noch keine SDS-Informationen hat.

== 0.4.2 - 2024-10-02

* Abfrage der SMC-K Daten vom Konnektor (ICCSN, Gültigkeit bis) (1x pro Tag)
* Aktualisierung des Card-Handles bei der Sammelaktion VerifyPin pro Kartenterminal.

== 0.4.1 - 2024-09-27

* Verbesserte Info-Ausgaben bei Nutzung der SMC-B Remote PIN