@@ -1,4 +1,4 @@
 module Cocard
   VERSION     = '0.6.1-dev'.freeze
-  RELEASEDATE = '2024-12-14'.freeze
+  RELEASEDATE = '2024-12-22'.freeze
 end
