@@ -200,7 +200,13 @@
 <div class="sect1">
 <h2 id="_0_6_1_dev_unreleased"><a class="anchor" href="#_0_6_1_dev_unreleased"></a>0.6.1-dev - unreleased</h2>
 <div class="sectionbody">
-
+<div class="ulist">
+<ul>
+<li>
+<p>Neu: Reboot von KoCoBox-Konnektoren</p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect1">
