@@ -2,6 +2,8 @@
 
 == 0.6.1-dev - unreleased
 
+* Neu: Reboot von KoCoBox-Konnektoren
+
 == 0.6.0 - 2024-12-14
 
 * Update auf Rails 7.2
